# app

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup-env.sh
app/: app.py  chainlit_ru.md  users.py
app/.chainlit/: config.toml
app/.chainlit/translations/: en-US.json  ru.json
app/public/: theme.json
app/src/db/: scheme.py
app/src/processing/: __init__.py  download_arxiv.py  pdf.py
data/large/: arxiv-metadata-cs-uniform.json  arxiv_metadata_with_pdfs.parquet
evaluation/: count_metrics.ipynb  rag_ollama_evaluation.json  rag_ollama_model_answers.json  testing.py
init/: init.sql
init/sql/: init.sql
scripts/: download_arxiv_pdfs.py  download_models.py  pdf_to_chunks.py
tests/: test_dataset.json
