[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.9.2",
    "docling>=2.64.0",
    "huggingface_hub>=0.20.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "langchain>=1.1.3",
    "langchain-ollama>=1.0.1",
    "psycopg2-binary>=2.9.11",
    "instructor>=1.13.0",
    "deepeval>=3.7.6",
    "sqlalchemy>=2.0.45",
]
